@@ -1,4 +1,4 @@
 """this defines all modules in the fac package.
 """
-__all__ = ['fac', 'crm', 'config', 'const', 'atom', 'spm']
+__all__ = ['fac', 'crm', 'config', 'const', 'table', 'atom', 'spm']
 
